# prse

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: main.yml
examples/: input.txt  main.rs
prse-derive/: Cargo.toml
prse-derive/src/: derive.rs  expand_derive.rs  instructions.rs  invocation.rs  lib.rs  parse.rs  var.rs
src/: implementations.rs  lending_parse.rs  lib.rs  parse_error.rs  parse_iterator.rs  parse_iterators.rs
tests/: common.rs
tests/test-alloc/: Cargo.toml  lib.rs
tests/test-no-std/: Cargo.toml  lib.rs
tests/test-no-std/ui/: no_vec.rs  no_vec.stderr
tests/test-std/: Cargo.toml  lib.rs
tests/test-std/ui/: derive.rs  derive.stderr  invalid-formats.rs  invalid-formats.stderr  invalid-multi.rs  invalid-multi.stderr  invalid-variables.rs  invalid-variables.stderr  named-variables.rs  named-variables.stderr  positional_variables.rs  positional_variables.stderr  types.rs  types.stderr  unclosed.rs  unclosed.stderr
tests/test-std/ui-post-1.69/: types.rs  types.stderr
