[workspace]
members = [
    ".",
    "prse-derive",
]

[package]
name = "prse"
version = "0.1.0"
edition = "2021"
authors = ["miam-miam100 <MiamMiam@mailbox.org>"]
documentation = "https://docs.rs/prse/"
license = "MIT OR Apache-2.0"
repository = "https://github.com/miam-miam100/prse"
readme = "README.md"
description = "A tiny string parsing utility."
keywords = ["string", "parsing", "format-args", "no-std"]
categories = ["parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prse-derive = { version = "0.1.0", path = "prse-derive", default-features = false }

[features]
std = ["alloc", "prse-derive/std"]
alloc = ["prse-derive/alloc"]
default = ["std"]