[workspace]
members = [
    ".",
    "prse-derive",
]

[package]
name = "prse"
version = "1.0.3"
edition = "2021"
authors = ["miam-miam100 <MiamMiam@mailbox.org>"]
documentation = "https://docs.rs/prse/"
license = "MIT OR Apache-2.0"
repository = "https://github.com/miam-miam100/prse"
readme = "README.md"
description = "A tiny string parsing utility."
keywords = ["string", "parsing", "format-args", "no-std"]
categories = ["parsing"]
exclude = [".github", "examples"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prse-derive = { version = "1.0.3", path="prse-derive", default-features = false }
memchr = { version = "2.6.4", default-features = false }

[features]
std = ["alloc", "prse-derive/std", "memchr/std"]
alloc = ["prse-derive/alloc"]
default = ["std"]