[workspace]
members = [
    ".",
    "prse-derive",
]

[package]
name = "prse"
version = "1.2.0"
edition = "2021"
rust-version = "1.67.1"
authors = ["miam-miam <MiamMiam@mailbox.org>"]
documentation = "https://docs.rs/prse/"
license = "MIT OR Apache-2.0"
repository = "https://github.com/miam-miam/prse"
readme = "README.md"
description = "A tiny string parsing utility."
keywords = ["string", "parsing", "format-args", "no-std"]
categories = ["parsing"]
exclude = [".github", "examples", "tests"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prse-derive = { version = "1.1.1", path = "prse-derive", default-features = false }
memchr = { version = "2.7.1", default-features = false }

[features]
std = ["alloc", "prse-derive/std", "memchr/std"]
alloc = ["prse-derive/alloc"]
default = ["std"]