[package]
name = "prse-derive"
version = "1.0.0"
edition = "2021"
authors = ["miam-miam100 <MiamMiam@mailbox.org>"]
documentation = "https://docs.rs/prse/"
license = "MIT OR Apache-2.0"
repository = "https://github.com/miam-miam100/prse"
readme = "../README.md"
description = "A helper macro crate for the prse crate."
keywords = ["string", "parsing", "format-args", "no-std"]
categories = ["parsing"]
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.2", default-features = false, features = ["parsing", "derive", "proc-macro", "clone-impls", "printing"] }
quote = "1.0.21"
proc-macro2 = "1.0.47"
itertools = "0.10.5"

[features]
std = ["alloc"]
alloc = []
default = ["std"]
