[package]
name = "prse-derive"
version = "1.1.1"
edition = "2021"
authors = ["miam-miam100 <MiamMiam@mailbox.org>"]
documentation = "https://docs.rs/prse/"
license = "MIT OR Apache-2.0"
repository = "https://github.com/miam-miam100/prse"
readme = "../README.md"
description = "A helper macro crate for the prse crate."
keywords = ["string", "parsing", "format-args", "no-std"]
categories = ["parsing"]
rust-version = "1.61.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.41", default-features = false, features = ["parsing", "derive", "proc-macro", "clone-impls", "printing"] }
quote = "1.0.33"
proc-macro2 = "1.0.70"
itertools = "0.12.0"

[features]
std = ["alloc"]
alloc = []
default = ["std"]
