[workspace]


[package]
name = "test-alloc"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dev-dependencies]
trybuild = "1.0.73"
prse = {path = "../../.", default-features = false, features = ["alloc"]}
