[workspace]

[package]
name = "test-std"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dev-dependencies]
rustversion = "1.0.14"
trybuild = "1.0.73"
prse = {path = "../../.", default-features = false, features = ["std"]}
pollster = "0.3.0"
